# convminds

./: architecture_overview.md  debug_huth_nan.py  debug_len.py  debug_nan.py  debug_train_nan.py  main.py  pyproject.toml  reproduce_error.py  test_gpt2_nan.py  test_gpt2_pad.py
convminds/data/benchmarks/: huth_alignment.py
convminds/metrics/: text.py
convminds/models/: residual_steer.py
convminds/pipelines/: residual_steer.py
