################################################################
#### project config ####
################################################################

[project]
name = "convminds"
version = "0.1.0"
description = ""
authors = [
    { name = "Jacopo Minniti", email = "jacopo.minniti004@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "torch>=1.9.1",
    "numpy>=1.21",
    "osfclient",
    "pytest",
    "scikit-learn",
    "transformers>=4.11.3",
    "datasets",
    "evaluate",
    "rouge_score",
    "jiwer",
    "h5py"
]

[build-system]
requires = [
    "setuptools>=65",
    "wheel"
]


################################################################
#### mypy type-checking config ####
################################################################

[tool.mypy]
ignore_missing_imports = true




################################################################
#### setuptools packaging config ####
################################################################

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["convminds*"]

[tool.setuptools.package-data]
# include non-python files in package install
"convminds" = ["**/*.json", "**/*.csv", "**/*.txt", "**/requirements.txt"]
